@@ -1,3 +1,8 @@
+2003-07-18	Till Straumann <strauman@slac.stanford.edu>
+
+	PR 288/rtems
+	* startup/bspstart.c: _ISR_Nest_level is now properly maintained.
+
 2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.ac: Remove AC_CONFIG_AUX_DIR.
